syntax = "proto3";

package v1;
 
option go_package = "github.com/arunima10a/task-manager/internal/controller/grpc/v1;v1";

service TaskService {
    rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
    rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
    rpc CreateCategory(CreateCategoryRequest) returns( CreateCategoryResponse);
    rpc ListCategories(ListCategoryRequest) returns ( ListCategoryResponse);
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;

}

message CreateTaskResponse {
    int32 id = 1;
    string status = 2;
}

message ListTasksRequest {
    string status = 1;
}

message Task {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    int32 category_id = 5;
    string category_name = 6;
}

message ListTasksResponse {
    repeated Task tasks = 1;
}

message CreateCategoryRequest {
    string name =1 ;

}

message CreateCategoryResponse{
    int32 id =1;

}

message ListCategoryRequest{


}
message Category {
    int32 id = 1;
    string name = 2;
}

message ListCategoryResponse{
    repeated Category categories = 1;

}